# pen-and-key-room-server

./: .dockerignore  .gitignore  Makefile  README.md
backend/python/: main.py  pyproject.toml
backend/python/src/: grpc_server.py  web_api.py
backend/python/src/ai_service/: __init__.py  api_keys.py  base.py  prompt_manager.py  service_manager.py
backend/python/src/ai_service/services/: anthropic_ai.py  google_ai.py  mistral_ai.py  open_ai.py
backend/python/src/config/: logging_config.py
backend/python/src/database/: connection.py
backend/python/src/database/repositories/: base_repository.py  drawings_repository.py  error_logs_repository.py  features_repository.py  result_details_repository.py  results_repository.py  scene_repository.py  shape_repository.py
backend/python/src/features/: feature_extractor.py
backend/python/src/proto/: drawing.proto
backend/python/tests/: test_grpc_server.py  test_web_api.py
backend/python/tests/database/: test_connection.py
backend/python/tests/database/repositories/: test_ai_log_repository.py  test_base_repository.py  test_drawing_repository.py  test_result_repository.py  test_scene_repository.py  test_shape_repository.py
backend/python/tests/manual/: test_shape_recognition.py
backend/python/tests/test_data/: circle.json  square.json  triangle.json
docker/dev/: Dockerfile  docker-compose.yml
docker/prod/: Dockerfile  docker-compose.yml
frontend/public/: index.html
mysql/: Dockerfile
mysql/conf.d/: my.cnf
mysql/init/: 01_create_tables.sql  02_insert_master_scenes_data.sql  (+1 more)
nginx/: nginx.conf
(+2 files in other folders)
